svg cutoff fix.

--- a/styles.css
+++ b/styles.css
@@ -384,9 +384,10 @@ svg #remainder-title, svg #measurement-remainder {
     width: 100%;
     height: auto;
     min-height: 40vh;
+    overflow: visible;
   }
   .diagram svg {
-    width: 100%;
+    width: 90%;
     max-height: 100%;
   }
 }
